tdf#90260 writerfilter: pasted RTF documents may contain no \par

sw core is not yet adapted, will be done in the next commit.

Change-Id: If8da12427e0cdaced4c1c1776b9f0b8cbde5c57c