writerfilter/source/dmapper/DomainMapper.cxx
@@ -2651,7 +2651,8 @@ void DomainMapper::lcl_endSectionGroup()
         m_pImpl->ExecuteFrameConversion();
         // First paragraph in a footnote doesn't count: that would create
         // additional paragraphs before and after the real footnote content.
-        if(m_pImpl->GetIsFirstParagraphInSection() && !m_pImpl->IsInFootOrEndnote())
+        // Also, when pasting, it's fine to not have any paragraph inside the document at all.
+        if (m_pImpl->GetIsFirstParagraphInSection() && !m_pImpl->IsInFootOrEndnote() && m_pImpl->IsNewDoc())
         {
             // This section has no paragraph at all (e.g. they are all actually in a frame).
             // If this section has a page break, there would be nothing to apply to the page
