writerfilter/source/rtftok/rtfdocumentfactory.cxx
@@ -18,9 +18,10 @@ RTFDocument::Pointer_t RTFDocumentFactory::createDocument(css::uno::Reference< c
         css::uno::Reference< css::io::XInputStream > const& xInputStream,
         css::uno::Reference< css::lang::XComponent > const& xDstDoc,
         css::uno::Reference< css::frame::XFrame > const& xFrame,
-        css::uno::Reference< css::task::XStatusIndicator > const& xStatusIndicator)
+        css::uno::Reference< css::task::XStatusIndicator > const& xStatusIndicator,
+        bool bIsNewDoc)
 {
-    return std::make_shared<RTFDocumentImpl>(xContext, xInputStream, xDstDoc, xFrame, xStatusIndicator);
+    return std::make_shared<RTFDocumentImpl>(xContext, xInputStream, xDstDoc, xFrame, xStatusIndicator, bIsNewDoc);
 }
 
 } // namespace rtftok
